<resources>
    <string name="app_name">微信红包</string>
    <string name="pref_open">抢红包</string>
    <string name="pre_not_self">自己发的不抢</string>
    <string name="pref_delay">延时抢红包</string>
    <string name="pref_delay_time">延时时长</string>
    <string name="pref_whisper">私聊不抢</string>
    <string name="pref_not_mute">免打扰不抢</string>
    <string name="quick_open">快速拆包</string>
    <string name="delay_message">延迟0毫秒拆开红包</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="author">作者</string>
    <string name="wechat_donate">微信捐赠</string>
    <string name="alipay_donate">支付宝捐赠</string>
    <string name="thanks">致敬</string>
    <string name="thanks_word">\t\t\t\t感谢 <a href='https://github.com/wuxianlin'>wuxianlin</a> 同学的<b> luckymoney </b>，让我知道 Xposed 还能这样玩，然后开始开发钉钉红包插件。\n\n
            \t\t\t\t感谢 <a href='https://github.com/xfunforx'>xfunforx</a> 同学以及他的 <a href='https://github.com/xfunforx/somecode'>somecode</a>，让我开始接手微信、QQ 红包插件的开发。\n\n
            \t\t\t\t本人平时上班就很忙，只能熬夜搞，非常辛苦，收到的捐赠远不够买咖啡的。却还得面对很多的非议，背负一些骂名。\n\n\n
            \t\t\t\t两位前辈在维护的时候应该也是非常不容易，在此本人送上敬意！\n\n\n
            \t\t\t\t这个插件我会尽量维护下去，发扬光大谈不上，争取不拖后腿吧，哈哈。\n\n
    </string>
</resources>
