<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting">

        <SwitchPreference
            android:defaultValue="true"
            android:key="open"
            android:title="@string/pref_open" />


        <SwitchPreference
            android:defaultValue="false"
            android:dependency="open"
            android:key="delay"
            android:title="@string/pref_delay" />


        <me.veryyoung.wechat.luckymoney.SeekBarPreference
            pref_kind="delay_time"
            android:defaultValue="true"
            android:dependency="delay"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_delay_time" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">
        <Preference
            android:key="author"
            android:summary="veryyoung"
            android:title="作者" />
        <Preference
            android:key="donate_alipay"
            android:title="支付宝捐赠" />
        <!--<Preference-->
        <!--android:key="donate_wechat"-->
        <!--android:title="微信捐赠" />-->
    </PreferenceCategory>

</PreferenceScreen>
